# fastapi_threadings

./: main.py  pyproject.toml
templates/: index.html
